<resources>
    <string name="app_name">Todo2021</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nenhuma_tarefa_salva">Nenhuma Tarefa Salva</string>
    <string name="t_tulo">Título</string>
    <string name="descri_o">Descrição</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="ordenar_por">Ordenar Por</string>
    <string name="prioridade_alta">Prioridade Alta</string>
    <string name="prioridade_media">Prioridade Média</string>
    <string name="prioridade_baixa">Prioridade Baixa</string>
    <string name="limpar_lista">Limpar lista</string>
    <string name="deletar_item">Deletar Item</string>
    <string name="title">Title</string>
    <string name="description">Description</string>

    <string-array name="priorities">
        <item>Selecione uma prioridade</item>
        <item>Alta</item>
        <item>Média</item>
        <item>Baixa</item>
    </string-array>
</resources>