<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".presentation.ui.fragment.AddFragment">

    <EditText
        android:id="@+id/editTextFragmentAddTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="no"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:fontFamily="@font/lato"
        android:hint="@string/t_tulo"
        android:inputType="text"
        android:minHeight="50dp"
        android:padding="8dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColorHint="@color/darkGray"
        tools:ignore="TextContrastCheck" />

    <Spinner
        android:id="@+id/spinnerFragmentAddPriority"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:elevation="4dp"
        android:entries="@array/priorities"
        android:fontFamily="@font/lato"
        android:paddingStart="4dp"
        android:paddingEnd="8dp"
        android:spinnerMode="dropdown"
        tools:ignore="SpeakableTextPresentCheck" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <EditText
            android:id="@+id/editTextTextMultiLineFragmentAddDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:autofillHints="yes"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:fontFamily="@font/lato"
            android:gravity="start|top"
            android:hint="@string/descri_o"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine"
            android:padding="8dp"
            android:textColorHint="@color/darkGray" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabFragmentAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:contentDescription="@string/app_name"
            android:focusable="true"
            android:src="@drawable/ic_baseline_done_24"
            app:backgroundTint="@color/purple_200"
            app:tint="@color/white" />
    </RelativeLayout>

</LinearLayout>